<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".language">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/indexbutton"
        android:text="Main Menu"
        android:textSize="15sp"
        android:textColor="#00f"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorLink="#df0000"
        android:textColorHighlight="#00ff00"
        android:linksClickable="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextget"
        android:text="Next"
        android:textSize="15sp"
        android:textColor="#00f"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorLink="#df0000"
        android:textColorHighlight="#00ff00"
        android:linksClickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backget"
        android:text="Back"
        android:textSize="15sp"
        android:textColor="#00f"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorLink="#df0000"
        android:textColorHighlight="#00ff00"
        android:linksClickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Web Development"
        android:gravity="center"
        android:fontFamily="serif"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:id="@+id/titlehead"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff0f0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="3. Language Reference"
        android:id="@+id/heading"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textColor="#ff00ff"
        android:gravity="center"
        android:shadowColor="#000000"
        android:layout_below="@+id/indexbutton"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="475sp"
        android:layout_below="@+id/heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang1"
                style="@style/head"
                android:layout_below="@+id/heading"
                android:id="@+id/intro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang2"
                style="@style/content"
                android:layout_below="@+id/intro"
                android:id="@+id/introduction"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang3"
                style="@style/head"
                android:layout_below="@+id/introduction"
                android:id="@+id/need" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang4"
                style="@style/content"
                android:layout_below="@+id/need"
                android:id="@+id/needing"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang5"
                style="@style/head"
                android:layout_below="@+id/introduction"
                android:id="@+id/need1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang6"
                style="@style/content"
                android:layout_below="@+id/need"
                android:id="@+id/needing1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang7"
                style="@style/head"
                android:layout_below="@+id/introduction"
                android:id="@+id/need2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang8"
                style="@style/content"
                android:layout_below="@+id/need"
                android:id="@+id/needing2"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
